<resources>
    <string name="app_name">Best Movies</string>
    <string name="movie_details">Movie Details</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Released On: %s</string>
    <string name="movie_average">Average: %d</string>
    <string name="movie_overview">Overview</string>
    <string name="added_favorites">Added to Favorites</string>
    <string name="removed_favorites">Removed from Favorites</string>
    <string name="sort_by_average">By Average</string>
    <string name="sort_by_name">By Name</string>
    <string name="sort_by_date">By Date</string>
</resources>
